# fibonacci

./: README.md  pyproject.toml  test.py
mylibrary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mypythonlibrary/: __init__.py  myfunctions.py
