[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mylibrary"
version = "0.1.0"
description = "A simple Fibonacci library"
authors = [
    { name="Kyle Boardwine", email="kyleboardwine@kurbickgroup.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
